--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Repolepsy</title>
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="icon" href="images/favicon.png">
   <style>
     .list-group-item div {
       position: relative;
