update from dist

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       flex: 0 0 calc(25% - 10px);
       margin-left: 5px;
       margin-right: 5px;
+      position: relative;
+    }
+    h3.subsection {
+      margin-left: 5px;
+      margin-right: 5px;
+      margin-bottom: 20px;
+      margin-top: 40px;
+    }
+    .repo-grid-item .panel-heading .btn-group {
+      position: absolute;
+      top: 8px;
+      right: 8px;
     }
   </style>
 </head>
