update from dist

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       top: 8px;
       right: 8px;
     }
+    .avatar {
+      width: 18px;
+      height: 18px;
+    }
   </style>
 </head>
 <body>
